# cauchy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cauchy/: Cargo.toml
cauchy-arena/: Cargo.toml
cauchy-arena/src/: arena.rs  errors.rs  lib.rs  player.rs
cauchy-arena/src/arena/: mod.rs
cauchy-arena/src/peer/: client.rs  mod.rs  server.rs
cauchy-arena/src/player/: mod.rs
cauchy-common/: Cargo.toml
cauchy-common/src/: lib.rs  messages.rs  network.rs
cauchy-common/src/services/: arena.rs  mod.rs  player.rs  vm.rs
cauchy-consensus/: Cargo.toml  README.md
cauchy-consensus/benches/: winner.rs
cauchy-consensus/src/: lib.rs
cauchy-crypto/: Cargo.toml
cauchy-crypto/src/: lib.rs  merkle.rs
cauchy-database/: Cargo.toml
cauchy-database/src/: lib.rs
cauchy-miner/: Cargo.toml
cauchy-miner/examples/: mine.rs
cauchy-miner/src/: lib.rs
cauchy-network/: Cargo.toml
cauchy-network/fb/: messages.fbs
cauchy-network/src/: lib.rs  messages.rs
cauchy-network/src/codec/: decoder.rs  encoder.rs  mod.rs
cauchy-player/: Cargo.toml
cauchy-player/src/: lib.rs
cauchy-player/src/peer/: client.rs  mod.rs  server.rs
cauchy-rpc/: Cargo.toml  build.rs
cauchy-rpc/example/: basic.py  generate.sh  peering.py
cauchy-rpc/examples/: basic.py  info.py  mining.py  peering.py  transactions.py
cauchy-rpc/proto/: info.proto  mining.proto  peering.proto  transactions.proto
cauchy-rpc/src/: info.rs  lib.rs  mining.rs  peering.rs  transactions.rs
cauchy-services/: Cargo.toml
cauchy-services/src/: arena.rs  database.rs  lib.rs  miner.rs  peer.rs  player.rs
cauchy-services/src/peers/: client.rs  mod.rs  player.rs  server.rs
cauchy-vm/: Cargo.toml  build.rs  contract_data.wasm
cauchy-vm/contracts/contract_data/: Cargo.toml
cauchy-vm/contracts/contract_data/src/: main.rs
cauchy-vm/src/: lib.rs  merkle.rs  wasm_vm.rs
cauchy-vm/src/contract_storage/: mod.rs
cauchy-vm/tests/: contract_data.wasm  interface_tests.rs
cauchy/src/: charge.rs  ego.rs  main.rs  manager.rs  peers.rs  settings.rs
contracts/: Cargo.toml
contracts/contract-data/: Cargo.toml
contracts/contract-data/src/: lib.rs
states/some_txid/: globals.json  mem.json
