[package]
name = "cauchy-consensus"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
common = { package = 'cauchy-common', path = '../cauchy-common' }
crypto = { package = 'cauchy-crypto', path = '../cauchy-crypto' }

num-bigint = "0.2.6"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7.3"

[[bench]]
name = "winner"
harness = false
