[package]
name = "cauchy-miner"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
crypto = { package = "cauchy-crypto", path = "../cauchy-crypto" }
futures-channel = "0.3.1"
parking_lot = "0.10.0"
rayon = "1.3.0"

[dev-dependencies]
tokio = { version = "0.2.9", features = ["macros", "rt-core"] }
futures-util = "0.3.1"
