[package]
name = "cauchy-miner"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
crypto = { package = 'cauchy-crypto',  path = '../cauchy-crypto' }

futures-core = "0.3.4"
rayon = "1.3.0"
tower-service = "0.3.0"
tokio = "0.2.20"
tracing = "0.1.13"
parking_lot = "0.10.2"
