[package]
name = "cauchy-network"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
common = { package = 'cauchy-common', path = '../cauchy-common' }

bytes = "0.5.4"
futures = "0.3.5"
tokio = { version = "0.2.20", features = ["tcp"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tracing = "0.1.13"
pin-project = "0.4.13"

[dev-dependencies]
rand = "0.7.3"
