[package]
name = "cauchy-player"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
common = { package = 'cauchy-common', path = '../cauchy-common' }
consensus = { package = 'cauchy-consensus',  path = '../cauchy-consensus' }
crypto = { package = 'cauchy-crypto', path = '../cauchy-crypto' }
database = { package = 'cauchy-database', path = '../cauchy-database' }
miner = { package = 'cauchy-miner',  path = '../cauchy-miner' }
network = { package = 'cauchy-network',  path = '../cauchy-network' }

bytes = "0.5.4"
dashmap = "3.11.1"
futures-channel = "0.3.5"
futures-core = "0.3.5"
futures-sink = "0.3.5"
futures-util = "0.3.11"
minisketch-rs = "0.1.9"
pin-project = "0.4.17"
tokio = { version = "0.2.21", features = ["tcp", "time"] }
tokio-util = "0.3.1"
tower-service = "0.3.0"
tower-buffer = "0.3.0"
tower-util = "0.3.1"
tokio-tower = "0.4.0"
tracing = "0.1.14"
