[package]
name = "cauchy-rpc"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
arena = { package = 'cauchy-arena',  path = '../cauchy-arena' }
miner = { package = 'cauchy-miner',  path = '../cauchy-miner' }
network = { package = 'cauchy-network',  path = '../cauchy-network' }

futures = "0.3.4"
http = "0.2.1"
prost = "0.6.1"
prost-types = "0.6.1"
tonic = { version = "0.2.0", features = ["tls", "transport"] }
tokio = { version = "0.2.20", features = ["tcp"] }
tower = "0.3.1"
tracing = "0.1.13"

[build-dependencies]
tonic-build = "0.2.0"
