[package]
name = "cauchy-rpc"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
common = { package = 'cauchy-common', path = '../cauchy-common' }
miner = { package = 'cauchy-miner',  path = '../cauchy-miner' }
network = { package = 'cauchy-network',  path = '../cauchy-network' }
player = { package = 'cauchy-player',  path = '../cauchy-player' }

bytes = "0.5.4"
futures-channel = "0.3.5"
futures-core = "0.3.5"
futures-util = "0.3.11"
http = "0.2.1"
prost = "0.6.1"
prost-types = "0.6.1"
tonic = { version = "0.2.1", features = ["tls", "transport"] }
tokio = { version = "0.2.21", features = ["tcp"] }
tower-service = "0.3.0"
tower-util = "0.3.1"
tracing = "0.1.14"

[build-dependencies]
tonic-build = "0.2.0"
