[package]
name = "cauchy-services"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
consensus = { package = 'cauchy-consensus',  path = '../cauchy-consensus' }
crypto = { package = 'cauchy-crypto',  path = '../cauchy-crypto' }
miner = { package = 'cauchy-miner',  path = '../cauchy-miner' }
network = { package = 'cauchy-network',  path = '../cauchy-network' }

bytes = "0.5.4"
dashmap = "3.11.1"
evmap = "9.0.1"
futures = "0.3.4"
rand = "0.7.3"
tokio = { version = "0.2.20", features = ["dns", "io-util", "stream", "tcp"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tower = "0.3.1"
tokio-tower = "0.3.6"
pin-project = "0.4.9"

[dev-dependencies]
rand = "0.7.3"
