[package]
name = "cauchy-vm"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>", "Chris Novick <c.r.novick@pm.me>"]
edition = "2018"

[dependencies]
crypto = { package = 'cauchy-crypto', path = '../cauchy-crypto' }

bytes = "0.5.4"
rust-wasm = {git="https://github.com/TheRealBluesun/rust-wasm", tag="v0.1.2"}
rayon = "1.3.0"
