[package]
name = "cauchy"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
arena = { package = 'cauchy-arena',  path = '../cauchy-arena' }
network = { package = 'cauchy-network',  path = '../cauchy-network' }

clap = { version = "2.33.0", features = ["yaml"] }
config = "0.10.1"
dirs = "2.0.2"
serde = { version = "1.0.104", features = ['derive'] }
tokio = { version = "0.2.11", features = ['macros'] }
